# Countdown-Timer

./: .gitignore  ARCHITECTURE.md  README.md  countdown_timer_core5_docs.md  pyproject.toml  requirements.txt
Schema/: README.md  config.schema.json  presets.schema.json  session-record.schema.json
Schema/examples/: config.example.toml  presets.example.json  session-record.example.json
src/pytimer/: __init__.py  __main__.py  app.py  cli.py  commands.py  display.py  duration.py  engine.py  errors.py  events.py  notifiers.py  parsers.py  persistence.py  renderers.py  time_source.py  timer.py
tests/: test_app.py  test_display.py  test_duration.py  test_engine.py  test_events.py  test_parsers.py  test_persistence.py  test_property_duration.py  test_renderers.py
